--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "=== Plugin Name === Contributors: (this should be a list of wordpress.org userid's) Donate link: https://amine.senpai.codes// Tags: comments, spam Requires at least: 3.0.1 Tested up to: 3.4 Stable tag: 4.3 License: GPLv2 or later License URI: http://www.gnu.org/licenses/gpl-2.0.html",
   "main": "index.js",
   "scripts": {
-    "bundle": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && cd .. && zip -r wp-maintenance-senpai.zip plugin-name && mv plugin-name.zip /mnt/d/"
+    "bundle": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && cd .. && zip -r wp-maintenance-senpai.zip plugin-name && mv wp-maintenance-senpai.zip /mnt/d/"
 
   },
   "keywords": [],
-  "author": "",
+  "author": "Amine Safsafi",
   "license": "ISC"
 }
