--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "wp-maintenance-senpai",
-  "version": "1.0.0",
+  "version": "0.0.2",
   "description": "=== Plugin Name === Contributors: (this should be a list of wordpress.org userid's) Donate link: https://amine.senpai.codes// Tags: comments, spam Requires at least: 3.0.1 Tested up to: 3.4 Stable tag: 4.3 License: GPLv2 or later License URI: http://www.gnu.org/licenses/gpl-2.0.html",
   "main": "index.js",
   "scripts": {
-    "bundle": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && cd .. && zip -r wp-maintenance-senpai.zip wp-maintenance-senpai && mv wp-maintenance-senpai.zip /mnt/d/"
-
+    "bundle": "find . -name 'node_modules' -type d -prune -exec rm -rf '{}' + && npm run inc_version && cd .. && zip -r wp-maintenance-senpai.zip wp-maintenance-senpai && mv wp-maintenance-senpai.zip /mnt/d/",
+    "inc_version_func": "new_version=$(echo $npm_package_version | awk -F. -v OFS=. '{$NF += 1 ; print}');sed -i \"s/$npm_package_version/$new_version/g\" wp-maintenance-senpai.php",
+    "inc_version_npm": "new_version=$(echo $npm_package_version | awk -F. -v OFS=. '{$NF += 1 ; print}');sed -i \"s/$npm_package_version/$new_version/g\" package.json",
+    "inc_version": "npm run inc_version_func && npm run inc_version_npm"
   },
   "keywords": [],
   "author": "Amine Safsafi",
